ajustes nuevos demo

--- a/calientitoapp-web/src/index.html
+++ b/calientitoapp-web/src/index.html
@@ -12,5 +12,8 @@
 </head>
 <body>
   <app-root></app-root>
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=&loading=async&libraries=places&callback=initMap">
+</script>
 </body>
 </html>
